--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -7,7 +7,7 @@
   <%= form_for @user, :url => {:controller => "profile", :action => "update"}, html: { class: "form-horizontal personal-info-form"} do |f| %>
 
       <% if @user.image.present? %>
-          <%= image_tag(@user.image, :class => 'profile-picture', :alt => "profile-picture") %>
+          <%= image_tag(@user.image_url(:thumb).to_s, :class => 'profile-picture', :alt => "profile-picture") %>
       <% else %>
           <%= image_tag('user2-160x160.jpg', :class => 'profile-picture', :alt => "profile-picture") %>
       <% end %>
@@ -78,6 +78,13 @@
         <div class="col-md-6">
           <%= f.label :street_address, class: 'textarea-label' %>
           <%= f.text_area :street_address, rows: 4, class: 'street-address-textarea', placeholder: "Enter your address here" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-md-6">
+          <%= f.label :image, "Image Upload" %>
+          <%= f.file_field :image %>
         </div>
       </div>
 
