--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
         <a href="javascript:void(0)"><span class="fa fa-camera camera"></span></a>
 
         <% if current_user && current_user.image.present? %>
-            <%= image_tag(@user.image_url.to_s, :class => 'img-circle profile-image center-block', :alt => "profile-picture") %>
+            <%= image_tag(current_user.image_url.to_s, :class => 'img-circle profile-image center-block', :alt => "profile-picture") %>
         <% else %>
             <%= image_tag('user2-160x160.jpg', :class => 'img-circle profile-image center-block', :alt => "profile-picture") %>
         <% end %>
@@ -56,7 +56,7 @@
 
       <ul class="sidebar-menu">
         <li class="<%=  (params[:controller] == 'profile' && params[:action] == 'profile') ? 'active' : '' %>">
-          <a href="#">
+          <a href="<%= profile_profile_path %>">
             <i class="fa fa-user"></i> <span class="space-sidebar">PROFILE</span>
           </a>
         </li>
@@ -85,8 +85,8 @@
             <i class="fa fa-phone"></i><span class="space-sidebar">CONTACT US</span>
           </a>
         </li>
-        <li>
-          <a href="#">
+        <li class="<%=  (params[:controller] == 'profile' && params[:action] == 'show_settings') ? 'active' : '' %>">
+          <a href="<%= show_settings_profile_path %>">
             <i class="fa fa-cog"></i><span class="space-sidebar">SETTINGS</span>
           </a>
         </li>
