- Image upload functionality complete need to design for this

--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -127,6 +127,8 @@
       </div>
       <%= f.button  "UPDATE PASSWORD", class: 'btn btn-update' %>
   <% end %>
+
+  <%= render partial: 'shared/profile_image_upload'%>
 </div>
 
 <script>
