--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
   <aside class="main-sidebar">
     <section class="sidebar">
       <div class="center-block profile-info">
-        <a href="javascript:void(0)"><span class="fa fa-camera camera"></span></a>
+        <a href="#profile_image_upload_modal" data-toggle="modal"><span class="fa fa-camera camera"></span></a>
 
         <% if current_user && current_user.image.present? %>
             <%= image_tag(@user.image_url.to_s, :class => 'img-circle profile-image center-block', :alt => "profile-picture") %>
