--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -109,7 +109,12 @@
 
       <div class="row">
         <div class="col-md-3 col-sm-3 col-xs-12">
-          <a href="<%= root_url %>"><%= image_tag('Logo.png', :class => 'image img-responsive header-logo', :alt => "Logo") %></a>
+          <% if current_user.brand? %>
+              <a href="<%= brand_home_public_index_path %>"><%= image_tag('Logo.png', :class => 'image img-responsive header-logo', :alt => "Logo") %></a>
+          <% else %>
+              <a href="<%= root_url %>"><%= image_tag('Logo.png', :class => 'image img-responsive header-logo', :alt => "Logo") %></a>
+          <% end %>
+
         </div>
         <div class="col-md-9 col-sm-9 col-xs-12 search-top-margin">
           <!-- search form -->
