--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -1,10 +1,10 @@
 <%= stylesheet_link_tag  'profile.css', media: 'all' %>
 
-<% title 'BrandReach Profile' %>
+<% title "BrandReach Profile" %>
 
-<div class='brands-profile-page-wrapper'>
+<div class="brands-profile-page-wrapper">
 
-  <%= image_tag(@user.profile_picture, :class => 'profile-picture', :alt => 'profile-picture') %>
+  <%= image_tag(@user.profile_picture, :class => 'profile-picture', :alt => "profile-picture") %>
 
   <%= form_for @user, url: profile_path(@user), html: { class: 'form-horizontal personal-info-form'} do |f| %>
 
@@ -74,6 +74,13 @@
         <div class="col-md-6">
           <%= f.label :street_address, class: 'textarea-label' %>
           <%= f.text_area :street_address, rows: 4, class: 'street-address-textarea', placeholder: "Enter your address here" %>
+        </div>
+      </div>
+
+      <div class="form-group">
+        <div class="col-md-6">
+          <%= f.label :image, "Image Upload" %>
+          <%= f.file_field :image %>
         </div>
       </div>
 
