- user image update backend functionality complete need to desing US and how error message will show - create profile_picture method in user model for profile picture show - change profile controller path to ' ' instead default ( with controller )

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,11 +27,7 @@
       <div class="center-block profile-info">
         <a href="#profile_image_upload_modal" data-toggle="modal"><span class="fa fa-camera camera"></span></a>
 
-        <% if current_user && current_user.image.present? %>
-            <%= image_tag(@user.image_url.to_s, :class => 'img-circle profile-image center-block', :alt => "profile-picture") %>
-        <% else %>
-            <%= image_tag('user2-160x160.jpg', :class => 'img-circle profile-image center-block', :alt => "profile-picture") %>
-        <% end %>
+            <%= image_tag(@user.profile_picture, :class => 'img-circle profile-image center-block', :alt => "profile-picture") %>
 
         <div class="info">
           <p class="name"><%= current_user.try(:name).present? ? current_user.name : 'USER' %></p>
