--- a/app/views/shared/_profile_image_upload.html.erb
+++ b/app/views/shared/_profile_image_upload.html.erb
@@ -22,16 +22,16 @@
 
             <div class="field">
               <%= f.label :image %><br>
-              <%= f.file_field :image %>
+              <%= f.file_field :image, required: true, pattern: '([a-zA-Z0-9\s_\\.\-:])+(.png|.jpg|.gif))' %>
             </div>
-            <div class="actions">
-              <%= f.submit %>
+
+
+            <div class="modal-footer">
+              <div class="actions">
+                <%= f.submit 'Update Profile Picture', class:'btn btn-success' %>
+              </div>
             </div>
         <% end %>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
       </div>
     </div>
   </div>
