--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <h2>Sign up</h2>
 
-<h4> Your are registering as <%= User.user_types.key(params[:user_type].to_i) %></h4>
+<h4> Your are registering as <%= params[:user_type] %></h4>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
