--- a/app/assets/stylesheets/profile.css
+++ b/app/assets/stylesheets/profile.css
@@ -155,7 +155,7 @@
     padding-top: 35px;
     padding-right: 30px;
     padding-bottom: 80px;
-    margin-bottom: 100px;
+    margin-bottom: 20px;
 }
 
 .social-account-tabs {
@@ -244,5 +244,58 @@
         font-size: 11px;
     }
 
+}
+
+#AddAccount {
+    z-index: 1060;
+}
+
+.account-modal-dialog {
+    padding-top: 9.3%;
+    height: 100%;
+    width: 60%;
+    font-family: 'Raleway', sans-serif;
+}
+
+.account-modal-content {
+    height: 460px;
+}
+
+#AddAccount .account-modal-header {
+    height: 100px;
+    padding: 32px 7%;
+    background-color: #00c9f3;
+}
+
+#AddAccount .account-modal-body {
+    padding: 32px 8%;
+}
+
+.account-modal-content .account-modal-header .account-modal-close {
+    color: #FFFFFF;
+    font-size: 3em;
+    margin-top: -38px;
+    opacity: 1.5;
+    font-weight: 100;
+}
+
+.account-modal-body {
+    padding: 40px 7% 0;
+}
+
+.add-another-account {
+    font-size: 20px;
+    font-weight: 500;
+    border-bottom: 1px solid #dddddd;
+    padding-bottom: 20px;
+}
+
+.account-content{
+    margin-top: 20px;
+    font-size: 16px
+}
+
+.account-content a {
+    color: #8f8f8f;
 }
 
