--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -92,6 +92,75 @@
           <%= f.text_area :short_bio, rows: 6, class: 'short_bio' %>
         </div>
       </div>
+
+      <% if @user.influencer? %>
+
+          <h4 class="social-account">SOCIAL ACCOUNTS AND PRICING</h4>
+
+          <%= link_to '<i class="fa fa-plus"></i> ADD ACCOUNT'.html_safe, "#AddAccount", "data-toggle" => "modal", :class => "btn btn-account" %>
+
+          <%= render partial: 'shared/add_account_modal'%>
+
+          <% if @user.facebook.present? %>
+              <div class="social-account-tabs">
+                <ul class="nav nav-tabs social-account-nav-tabs">
+                  <li class="active"><a data-toggle="tab" href="#fb_bhanu"><i class="social-account-fa-edit fa fa-facebook"></i> Bhanu Prasad</a></li>
+                  <!--<li><a data-toggle="tab" href="#twitter_bhanu"><i class="social-account-fa-edit fa fa-twitter"></i> Bhanu Prasad</a></li>-->
+                </ul>
+
+                <div class="tab-content social-account-tab-content">
+                  <div id="fb_bhanu" class="tab-pane fade in active">
+                    <div class="form-group">
+                      <div class="col-md-5 col-sm-8 col-xs-11">
+                        <%= f.label :status_update_price, "Status Update" %>$
+                        <%= f.text_field :status_update_price %> USD
+                      </div>
+                      <div class="col-md-6 col-sm-8 col-xs-11">
+                        <%= f.label :banner_photo_price, "Cover Photo" %>$
+                        <%= f.text_field :banner_photo_price %> USD
+                      </div>
+                    </div>
+                    <div class="form-group">
+                      <div class="col-md-5 col-sm-8 col-xs-11">
+                        <%= f.label :profile_photo_price, "Profile Photo" %>$
+                        <%= f.text_field :profile_photo_price %> USD
+                      </div>
+                      <div class="col-md-6 col-sm-8 col-xs-11">
+                        <%= f.label :video_post_price, "Video Post" %>$
+                        <%= f.text_field :video_post_price %> USD
+                      </div>
+                    </div>
+                  </div>
+
+                  <!--<div id="twitter_bhanu" class="tab-pane fade">-->
+                  <!--<div class="form-group">-->
+                  <!--<div class="col-md-5 col-sm-8 col-xs-11">-->
+                  <!--<label for="twitter_bhanu_status_update">Status Update</label>$-->
+                  <!--<input type="text" class="" id="twitter_bhanu_status_update"/> USD-->
+                  <!--</div>-->
+                  <!--<div class="col-md-6 col-sm-8 col-xs-11">-->
+                  <!--<label for="twitter_bhanu_cover_photo">Cover Photo</label>$-->
+                  <!--<input type="text" class="" id="twitter_bhanu_cover_photo"/> USD-->
+                  <!--</div>-->
+                  <!--</div>-->
+                  <!--<div class="form-group">-->
+                  <!--<div class="col-md-5 col-sm-8 col-xs-11">-->
+                  <!--<label for="twitter_bhanu_profile_photo">Profile Photo</label>$-->
+                  <!--<input type="text" class="" id="twitter_bhanu_profile_photo"/> USD-->
+                  <!--</div>-->
+                  <!--<div class="col-md-6 col-sm-8 col-xs-11">-->
+                  <!--<label for="twitter_bhanu_video_post">Video Post</label>$-->
+                  <!--<input type="text" class="" id="twitter_bhanu_video_post"/> USD-->
+                  <!--</div>-->
+                  <!--</div>-->
+                  <!--</div>-->
+                </div>
+              </div>
+          <% end %>
+
+      <% end %>
+
+
       <%= f.button  "UPDATE INFORMATION", class: 'btn btn-update' %>
   <% end %>
 
@@ -129,17 +198,17 @@
 
 <script>
 
-$(document).ready(function(){
-    $('select#user_country').change(function() {
+    $(document).ready(function(){
+        $('select#user_country').change(function() {
 
-        var country = 'country=' + $('select#user_country :selected').text();
-        jQuery.get('/profiles/subregion_options' + country, function(data){
-            jQuery("user_state").html( data);
-    })
-    return false;
+            var country = 'country=' + $('select#user_country :selected').text();
+            jQuery.get('/profiles/subregion_options' + country, function(data){
+                jQuery("user_state").html( data);
+            })
+            return false;
+        });
+
+
     });
-
-
-});
 
 </script>
