--- a/app/views/profile/_sub_region_select.html.erb
+++ b/app/views/profile/_sub_region_select.html.erb
@@ -3,7 +3,7 @@
   <% country = Carmen::Country.coded(parent_region) %>
 
   <% if country.nil? %>
-      <em>Please select a country above</em>
+      <%= text_field_tag :state, 'Please Select Any Country', disabled: true %>
   <% elsif country.subregions? %>
       <%= subregion_select(:user, :state, parent_region, {}, { :class => 'profile-dropdown-color' }) %>
   <% else %>
