--- a/app/assets/stylesheets/brands-explore.css
+++ b/app/assets/stylesheets/brands-explore.css
@@ -1,9 +1,9 @@
 .brands-explore-content-wrapper{
-
+    margin: 30px 50px;
 }
 
 .brands-explore-advance-search{
-    background-color: #FFFFFF;
+    background-color: #f9f9f9;
     padding: 5px;
 }
 
@@ -13,13 +13,42 @@
     height: 30px;
     border-radius: 0;
     border: 1px solid #d9d9d9;
-    background-color: #FFFFFF;
+    background-color: #f9f9f9;
+}
+
+.brands-explore-advance-search label {
+    margin-top: 15px;
 }
 
 .brands-explore-content-wrapper hr{
     height: 2px;
     background-color: #ff3059;
-    margin-top: 0;
+    margin: 30px -50px 40px -50px;
+    width: auto;
+}
+
+.brands-explore-content-wrapper .influencer-name {
+    color: #ff3059;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.brands-explore-content-wrapper .influencer-address {
+    font-size: 12px;
+}
+
+.influencer-data {
+    margin: 10px;
+}
+
+.influencer-biography {
+    font-size: 13px;
+    overflow: hidden;
+    height: 72px;
+}
+
+.btn-view-profile {
+    width: 100%;
 }
 .search-result .row{
     margin-right: -2px;
@@ -35,6 +64,7 @@
     box-shadow: 0 0 1px #d9d9d9;
     background-color: #FFFFFF;
     padding: 5px;
+    margin: 3px;
 }
 
 /* =================== style sheet for brands profile show modal =======================*/
@@ -67,7 +97,7 @@
 
 .follower-box{
     box-shadow: 0 0 2px #d9d9d9;
-    padding: 20px;
+    padding: 12px 16px;
 }
 
 .follower-box .follower-number{
