--- a/app/views/brands/explore.html.erb
+++ b/app/views/brands/explore.html.erb
@@ -80,7 +80,8 @@
     <div class="row padding-less-column-parent">
       <div class="col-md-3 col-sm-6 col-sm-12">
         <div class="search-result-item">
-          <img src="images/Logo.png" class="img-responsive">
+          <%= image_tag(current_user.image_url(:explore_image).to_s, :alt => "profile-picture") %>
+
           <div class="influencer-data">
             <div class="influencer-name"> John Doe</div>
 
@@ -96,7 +97,7 @@
             </p>
 
             <div>
-              <img src="images/pepsi-small.jpg"> <span class="number-of-follower">23,456</span>
+              <%= image_tag('explore-followers.png', :alt => "number-of-follower") %> &nbsp;23,456
             </div>
           </div>
           <button class="btn btn-primary btn-view-profile" data-target="#show-brands-profile" data-toggle="modal">VIEW
@@ -107,7 +108,8 @@
 
       <div class="col-md-3 col-sm-6 col-sm-12">
         <div class="search-result-item">
-          <img src="images/Logo.png" class="img-responsive">
+          <%= image_tag(current_user.image_url(:explore_image).to_s, :alt => "profile-picture") %>
+
           <div class="influencer-data">
             <div class="influencer-name"> John Doe</div>
 
@@ -123,7 +125,7 @@
             </p>
 
             <div>
-              <img src="images/pepsi-small.jpg"> <span class="number-of-follower">23,456</span>
+              <%= image_tag('explore-followers.png', :alt => "number-of-follower") %> &nbsp;23,456
             </div>
           </div>
           <button class="btn btn-primary btn-view-profile" data-target="#show-brands-profile" data-toggle="modal">VIEW
@@ -134,7 +136,8 @@
 
       <div class="col-md-3 col-sm-6 col-sm-12">
         <div class="search-result-item">
-          <img src="images/Logo.png" class="img-responsive">
+          <%= image_tag(current_user.image_url(:explore_image).to_s, :alt => "profile-picture") %>
+
           <div class="influencer-data">
             <div class="influencer-name"> John Doe</div>
 
@@ -150,7 +153,7 @@
             </p>
 
             <div>
-              <img src="images/pepsi-small.jpg"> <span class="number-of-follower">23,456</span>
+              <%= image_tag('explore-followers.png', :alt => "number-of-follower") %> &nbsp;23,456
             </div>
           </div>
           <button class="btn btn-primary btn-view-profile" data-target="#show-brands-profile" data-toggle="modal">VIEW
@@ -161,7 +164,8 @@
 
       <div class="col-md-3 col-sm-6 col-sm-12">
         <div class="search-result-item">
-          <img src="images/Logo.png" class="img-responsive">
+          <%= image_tag(current_user.image_url(:explore_image).to_s, :alt => "profile-picture") %>
+
           <div class="influencer-data">
             <div class="influencer-name"> John Doe</div>
 
@@ -177,7 +181,7 @@
             </p>
 
             <div>
-              <img src="images/pepsi-small.jpg"> <span class="number-of-follower">23,456</span>
+              <%= image_tag('explore-followers.png', :alt => "number-of-follower") %> &nbsp;23,456
             </div>
           </div>
           <button class="btn btn-primary btn-view-profile" data-target="#show-brands-profile" data-toggle="modal">VIEW
@@ -190,7 +194,8 @@
     <div class="row padding-less-column-parent">
       <div class="col-md-3 col-sm-6 col-sm-12">
         <div class="search-result-item">
-          <img src="images/Logo.png" class="img-responsive">
+          <%= image_tag(current_user.image_url(:explore_image).to_s, :alt => "profile-picture") %>
+
           <div class="influencer-data">
             <div class="influencer-name"> John Doe</div>
 
@@ -206,7 +211,7 @@
             </p>
 
             <div>
-              <img src="images/pepsi-small.jpg"> <span class="number-of-follower">23,456</span>
+              <%= image_tag('explore-followers.png', :alt => "number-of-follower") %> &nbsp;23,456
             </div>
           </div>
           <button class="btn btn-primary btn-view-profile" data-target="#show-brands-profile" data-toggle="modal">VIEW
@@ -217,7 +222,8 @@
 
       <div class="col-md-3 col-sm-6 col-sm-12">
         <div class="search-result-item">
-          <img src="images/Logo.png" class="img-responsive">
+          <%= image_tag(current_user.image_url(:explore_image).to_s, :alt => "profile-picture") %>
+
           <div class="influencer-data">
             <div class="influencer-name"> John Doe</div>
 
@@ -233,7 +239,7 @@
             </p>
 
             <div>
-              <img src="images/pepsi-small.jpg"> <span class="number-of-follower">23,456</span>
+              <%= image_tag('explore-followers.png', :alt => "number-of-follower") %> &nbsp;23,456
             </div>
           </div>
           <button class="btn btn-primary btn-view-profile" data-target="#show-brands-profile" data-toggle="modal">VIEW
@@ -244,7 +250,8 @@
 
       <div class="col-md-3 col-sm-6 col-sm-12">
         <div class="search-result-item">
-          <img src="images/Logo.png" class="img-responsive">
+          <%= image_tag(current_user.image_url(:explore_image).to_s, :alt => "profile-picture") %>
+
           <div class="influencer-data">
             <div class="influencer-name"> John Doe</div>
 
@@ -260,7 +267,7 @@
             </p>
 
             <div>
-              <img src="images/pepsi-small.jpg"> <span class="number-of-follower">23,456</span>
+              <%= image_tag('explore-followers.png', :alt => "number-of-follower") %> &nbsp;23,456
             </div>
           </div>
           <button class="btn btn-primary btn-view-profile" data-target="#show-brands-profile" data-toggle="modal">VIEW
@@ -271,7 +278,8 @@
 
       <div class="col-md-3 col-sm-6 col-sm-12">
         <div class="search-result-item">
-          <img src="images/Logo.png" class="img-responsive">
+          <%= image_tag(current_user.image_url(:explore_image).to_s, :alt => "profile-picture") %>
+
           <div class="influencer-data">
             <div class="influencer-name"> John Doe</div>
 
@@ -287,7 +295,7 @@
             </p>
 
             <div>
-              <img src="images/pepsi-small.jpg"> <span class="number-of-follower">23,456</span>
+              <%= image_tag('explore-followers.png', :alt => "number-of-follower") %> &nbsp;23,456
             </div>
           </div>
           <button class="btn btn-primary btn-view-profile" data-target="#show-brands-profile" data-toggle="modal">VIEW
