--- a/app/views/brands/explore.html.erb
+++ b/app/views/brands/explore.html.erb
@@ -3,8 +3,6 @@
 <% title "Brand Explore" %>
 
 <div class="brands-explore-content-wrapper">
-
-
   <div class="brands-explore-advance-search">
     <form action="" role="form" class="vertical">
       <h4>ADVANCED SEARCH</h4>
@@ -99,9 +97,7 @@
               <img src="images/pepsi-small.jpg"> <span class="number-of-follower">23,456</span>
             </div>
           </div>
-          <button class="btn btn-primary btn-view-profile" data-target="#show-brands-profile" data-toggle="modal">VIEW
-            PROFILE
-          </button>
+          <%= link_to 'VIEW PROFILE', influencer_path(id: 1), remote: true %>
         </div>
       </div>
 
@@ -299,154 +295,5 @@
   </div>
 </div>
 
-<div class="modal fade modal-profile" id="show-brands-profile" tabindex="-1" role="dialog"
-     aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-        aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel"></h4>
-      </div>
-      <div class="modal-body">
-        <div class="row ">
-          <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
-            <div class="row">
-              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-3">
-                <img src="images/Logo.png" class="pull-right">
-              </div>
+<div id="profile-modal"></div>
 
-              <div class="col-lg-6 col-md-6 col-sm-6 col-xs-3">
-                <h4>Bhanu Prasad</h4>
-
-                <p class="address"> San Francisco, CA</p>
-
-                <p class="title"> Entrepreneur</p>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-8 col-md-6 col-sm-6 col-xs-12">
-            <div class="btn-box pull-right">
-              <button class="btn btn-engage"> ENGAGE</button>
-              <button class="btn btn-message"> MESSAGE</button>
-            </div>
-            <div class="follower-box pull-right">
-              <span class="follower-number"> 23,456 </span>
-
-              <p> Followers</p>
-            </div>
-          </div>
-        </div>
-
-        <div class="row">
-          <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <p class="profile-info">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis massa diam. Integer non ornare felis. Integer vel dolor ut mauris lobortis fringilla.
-              Curabitur convallis massa et commodo pellentesque.
-            </p>
-          </div>
-        </div>
-        <!-- start of pricing section -->
-        <h2> Pricing</h2>
-        <div class="row">
-          <div class="col-md-12">
-            <div class="social-account-tabs">
-              <ul class="nav nav-tabs social-account-nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#fb_bhanu"><i class="social-account-fa-edit fa fa-facebook"></i> Bhanu Prasad</a></li>
-                <li><a data-toggle="tab" href="#nirvana"><i class="social-account-fa-edit fa fa-facebook"></i> NirvanaLabs</a></li>
-                <li><a data-toggle="tab" href="#twitter_bhanu"><i class="social-account-fa-edit fa fa-twitter"></i> Bhanu Prasad</a></li>
-              </ul>
-
-              <div class="tab-content social-account-tab-content">
-                <div id="fb_bhanu" class="tab-pane fade in active">
-                  <div class="form-group">
-                    <div class="col-md-5 col-sm-8 col-xs-11">
-                      <label for="fb_bhanu_status_update">Status Update</label>$
-                      <input type="text" class="" id="fb_bhanu_status_update"/> USD
-                    </div>
-                    <div class="col-md-6 col-sm-8 col-xs-11">
-                      <label for="fb_bhanu_cover_photo">Cover Photo</label>$
-                      <input type="text" class="" id="fb_bhanu_cover_photo"/> USD
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-md-5 col-sm-8 col-xs-11">
-                      <label for="fb_bhanu_profile_photo">Profile Photo</label>$
-                      <input type="text" class="" id="fb_bhanu_profile_photo"/> USD
-                    </div>
-                    <div class="col-md-6 col-sm-8 col-xs-11">
-                      <label for="fb_bhanu_video_post">Video Post</label>$
-                      <input type="text" class="" id="fb_bhanu_video_post"/> USD
-                    </div>
-                  </div>
-                </div>
-
-                <div id="nirvana" class="tab-pane fade">
-                  <div class="form-group">
-                    <div class="col-md-5 col-sm-8 col-xs-11">
-                      <label for="nirvana_status_update">Status Update</label>$
-                      <input type="text" class="" id="nirvana_status_update"/> USD
-                    </div>
-                    <div class="col-md-6 col-sm-8 col-xs-11">
-                      <label for="nirvana_cover_photo">Cover Photo</label>$
-                      <input type="text" class="" id="nirvana_cover_photo"/> USD
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-md-5 col-sm-8 col-xs-11">
-                      <label for="nirvana_profile_photo">Profile Photo</label>$
-                      <input type="text" class="" id="nirvana_profile_photo"/> USD
-                    </div>
-                    <div class="col-md-6 col-sm-8 col-xs-11">
-                      <label for="nirvana_video_post">Video Post</label>$
-                      <input type="text" class="" id="nirvana_video_post"/> USD
-                    </div>
-                  </div>
-                </div>
-
-                <div id="twitter_bhanu" class="tab-pane fade">
-                  <div class="form-group">
-                    <div class="col-md-5 col-sm-8 col-xs-11">
-                      <label for="twitter_bhanu_status_update">Status Update</label>$
-                      <input type="text" class="" id="twitter_bhanu_status_update"/> USD
-                    </div>
-                    <div class="col-md-6 col-sm-8 col-xs-11">
-                      <label for="twitter_bhanu_cover_photo">Cover Photo</label>$
-                      <input type="text" class="" id="twitter_bhanu_cover_photo"/> USD
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-md-5 col-sm-8 col-xs-11">
-                      <label for="twitter_bhanu_profile_photo">Profile Photo</label>$
-                      <input type="text" class="" id="twitter_bhanu_profile_photo"/> USD
-                    </div>
-                    <div class="col-md-6 col-sm-8 col-xs-11">
-                      <label for="twitter_bhanu_video_post">Video Post</label>$
-                      <input type="text" class="" id="twitter_bhanu_video_post"/> USD
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div> <!-- end of pricing section -->
-
-        <h2> Social Media Information</h2>
-        <p><span class="social-site">Facebook:</span> https://www.facebook.com/johnDoe</p>
-        <p><span class="social-site-twitter">Twitter:</span> @johnross</p>
-
-        <div class="row">
-          <div class="col-md-6">
-            <h2> Industry</h2>
-            <p>Marketing, Production</p>
-          </div>
-          <div class="col-md-6">
-            <h2> Location</h2>
-            <p>Hyderabad, India</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
