--- a/app/views/influencers/_profile_modal.erb
+++ b/app/views/influencers/_profile_modal.erb
@@ -12,11 +12,11 @@
           <div class="col-lg-4 col-md-6 col-sm-6 col-xs-12">
             <div class="row">
               <div class="col-lg-6 col-md-6 col-sm-6 col-xs-3">
-                <img src="images/Logo.png" class="pull-right">
+                <img src="<%= influencer.profile_picture %>" class="pull-right">
               </div>
 
               <div class="col-lg-6 col-md-6 col-sm-6 col-xs-3">
-                <h4>Bhanu Prasad</h4>
+                <h4><%= influencer.name %></h4>
 
                 <p class="address"> San Francisco, CA</p>
 
@@ -41,8 +41,7 @@
         <div class="row">
           <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <p class="profile-info">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis massa diam. Integer non ornare felis. Integer vel dolor ut mauris lobortis fringilla.
-              Curabitur convallis massa et commodo pellentesque.
+              <%= influencer.short_bio %>
             </p>
           </div>
         </div>
