- remove extra character that was shown to #profile-modal div from show.js.rb

--- a/app/views/influencers/show.js.erb
+++ b/app/views/influencers/show.js.erb
@@ -1,2 +1,2 @@
-$('#profile-modal').html('$("<%= j render(:partial => 'influencers/profile_modal', :locals => { influencer: @influencer}) %>")');
+$('#profile-modal').html("<%= j render(:partial => 'influencers/profile_modal', :locals => { influencer: @influencer}) %>");
 $('#show-brands-profile').modal('show');
