--- a/app/views/brands/explore.html.erb
+++ b/app/views/brands/explore.html.erb
@@ -5,7 +5,7 @@
 <div class="brands-explore-content-wrapper">
   <div class="brands-explore-advance-search">
     <form action="" role="form" class="vertical">
-      <h4>ADVANCED SEARCH</h4>
+      <div class="advanced-search">ADVANCED SEARCH</div>
 
       <div class="row">
         <div class="col-md-4">
