--- a/app/views/brands/_explore_influencers_profile.html.erb
+++ b/app/views/brands/_explore_influencers_profile.html.erb
@@ -1,5 +1,5 @@
 <div class="modal fade modal-profile" id="show-brands-profile" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
+  <div class="modal-dialog influencer-profile-modal" role="document">
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -50,13 +50,11 @@
           <div class="col-md-12">
             <div class="social-account-tabs">
               <ul class="nav nav-tabs social-account-nav-tabs">
-                <li class="active"><a data-toggle="tab" href="#fb_bhanu"><i class="social-account-fa-edit fa fa-facebook"></i> Bhanu Prasad</a></li>
-                <li><a data-toggle="tab" href="#nirvana"><i class="social-account-fa-edit fa fa-facebook"></i> NirvanaLabs</a></li>
-                <li><a data-toggle="tab" href="#twitter_bhanu"><i class="social-account-fa-edit fa fa-twitter"></i> Bhanu Prasad</a></li>
+                <li class="active"><a data-toggle="tab" href="#fb"><i class="social-account-fa-edit fa fa-facebook"></i> Bhanu Prasad</a></li>
               </ul>
 
               <div class="tab-content social-account-tab-content">
-                <div id="fb_bhanu" class="tab-pane fade in active">
+                <div id="fb" class="tab-pane fade in active">
                   <div class="form-group">
                     <div class="col-md-5 col-sm-8 col-xs-11">
                       <label for="fb_bhanu_status_update">Status Update</label>$
@@ -75,52 +73,6 @@
                     <div class="col-md-6 col-sm-8 col-xs-11">
                       <label for="fb_bhanu_video_post">Video Post</label>$
                       <input type="text" class="" id="fb_bhanu_video_post"/> USD
-                    </div>
-                  </div>
-                </div>
-
-                <div id="nirvana" class="tab-pane fade">
-                  <div class="form-group">
-                    <div class="col-md-5 col-sm-8 col-xs-11">
-                      <label for="nirvana_status_update">Status Update</label>$
-                      <input type="text" class="" id="nirvana_status_update"/> USD
-                    </div>
-                    <div class="col-md-6 col-sm-8 col-xs-11">
-                      <label for="nirvana_cover_photo">Cover Photo</label>$
-                      <input type="text" class="" id="nirvana_cover_photo"/> USD
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-md-5 col-sm-8 col-xs-11">
-                      <label for="nirvana_profile_photo">Profile Photo</label>$
-                      <input type="text" class="" id="nirvana_profile_photo"/> USD
-                    </div>
-                    <div class="col-md-6 col-sm-8 col-xs-11">
-                      <label for="nirvana_video_post">Video Post</label>$
-                      <input type="text" class="" id="nirvana_video_post"/> USD
-                    </div>
-                  </div>
-                </div>
-
-                <div id="twitter_bhanu" class="tab-pane fade">
-                  <div class="form-group">
-                    <div class="col-md-5 col-sm-8 col-xs-11">
-                      <label for="twitter_bhanu_status_update">Status Update</label>$
-                      <input type="text" class="" id="twitter_bhanu_status_update"/> USD
-                    </div>
-                    <div class="col-md-6 col-sm-8 col-xs-11">
-                      <label for="twitter_bhanu_cover_photo">Cover Photo</label>$
-                      <input type="text" class="" id="twitter_bhanu_cover_photo"/> USD
-                    </div>
-                  </div>
-                  <div class="form-group">
-                    <div class="col-md-5 col-sm-8 col-xs-11">
-                      <label for="twitter_bhanu_profile_photo">Profile Photo</label>$
-                      <input type="text" class="" id="twitter_bhanu_profile_photo"/> USD
-                    </div>
-                    <div class="col-md-6 col-sm-8 col-xs-11">
-                      <label for="twitter_bhanu_video_post">Video Post</label>$
-                      <input type="text" class="" id="twitter_bhanu_video_post"/> USD
                     </div>
                   </div>
                 </div>
